--- a/css/main.css
+++ b/css/main.css
@@ -8,11 +8,13 @@ html, body {
 	font-family:Arial, Helvetica, sans-serif;
 	height: 100%;
 	background-color: #EAF0EE;
+
 }
 
 img {
 width: 100%;
 height: auto;
+max-width: 350px;
 }
 
 h1 {
@@ -25,7 +27,6 @@ h1 {
 
 display: grid;
 grid-template-columns: 1fr 1fr;
-height: 100%;
 
 }
 
@@ -33,7 +34,7 @@ height: 100%;
 	display: block;
 	padding:20px;
 	font-size: 50px;
-	text-decoration: none;	
+	text-decoration: none;
 }
 
 .box:hover{
@@ -48,16 +49,14 @@ height: 100%;
 	display: inline;
 }
 
+.imghov:hover {
+	max-width: 380px;
+}
+
 
 .white {
 
 color: black;
-background-image: url(file:///Users/melvincedervall/Desktop/Webbutveckling/Nerds/img/dator.png);
-background-position: center;
-background-size: 350px;
-background-repeat: no-repeat;
-
-
 
 }
 
@@ -65,11 +64,6 @@ background-repeat: no-repeat;
 
 background-color: #333333;
 color: #e6e6e6;
-background-image: url(file:///Users/melvincedervall/Desktop/Webbutveckling/Nerds/img/sublime-thumb.png);
-background-position: center;
-background-size: 350px;
-background-repeat: no-repeat;
-
 
 }
 
