--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,9 @@ html, body {
 img {
 width: 100%;
 height: auto;
-max-width: 350px;
 }
 
-h1 {
+h1, h2, h3 {
 	margin-bottom: 16px;
 	margin-top: 15px;
 }
